--- a/app/views/static_pages/_user_logged_in.html.erb
+++ b/app/views/static_pages/_user_logged_in.html.erb
@@ -3,7 +3,10 @@
       <section class="user_info">
         <%= render 'shared/user_info' %>
       </section>
-      <section class="mictopost_form">
+      <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
+      <section class="micropost_form">
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
